--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/terminus": "^10.1.1",
     "@nestjs/typeorm": "^10.0.0",
